--- a/counter.html
+++ b/counter.html
@@ -10,9 +10,9 @@
     <div class="block">
       <div id="count_block">0</div>
       <div class="btn_block">
-        <button id="decreaseBtn">Decrement</button>
-        <button id="resetBtn">Reset</button>
-        <button id="increaseBtn">Increment</button>
+        <div><button id="decreaseBtn">Decrement</button></div>
+        <div><button id="resetBtn">Reset</button></div>
+        <div><button id="increaseBtn">Increment</button></div>
       </div>
     </div>
     <script src="counter.js"></script>
